@@ -132,6 +132,19 @@ name|java
 operator|.
 name|util
 operator|.
+name|concurrent
+operator|.
+name|locks
+operator|.
+name|ReentrantLock
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|function
 operator|.
 name|Predicate
@@ -379,6 +392,12 @@ name|LeafCache
 argument_list|>
 name|cache
 decl_stmt|;
+DECL|field|lock
+specifier|private
+specifier|final
+name|ReentrantLock
+name|lock
+decl_stmt|;
 comment|// these variables are volatile so that we do not need to sync reads
 comment|// but increments need to be performed under the lock
 DECL|field|ramBytesUsed
@@ -472,6 +491,12 @@ operator|=
 operator|new
 name|IdentityHashMap
 argument_list|<>
+argument_list|()
+expr_stmt|;
+name|lock
+operator|=
+operator|new
+name|ReentrantLock
 argument_list|()
 expr_stmt|;
 name|ramBytesUsed
@@ -641,6 +666,12 @@ name|Query
 name|query
 parameter_list|)
 block|{
+assert|assert
+name|lock
+operator|.
+name|isHeldByCurrentThread
+argument_list|()
+assert|;
 name|hitCount
 operator|+=
 literal|1
@@ -659,6 +690,12 @@ name|Query
 name|query
 parameter_list|)
 block|{
+assert|assert
+name|lock
+operator|.
+name|isHeldByCurrentThread
+argument_list|()
+assert|;
 assert|assert
 name|query
 operator|!=
@@ -682,6 +719,12 @@ name|long
 name|ramBytesUsed
 parameter_list|)
 block|{
+assert|assert
+name|lock
+operator|.
+name|isHeldByCurrentThread
+argument_list|()
+assert|;
 name|this
 operator|.
 name|ramBytesUsed
@@ -702,6 +745,12 @@ name|long
 name|ramBytesUsed
 parameter_list|)
 block|{
+assert|assert
+name|lock
+operator|.
+name|isHeldByCurrentThread
+argument_list|()
+assert|;
 name|this
 operator|.
 name|ramBytesUsed
@@ -722,6 +771,12 @@ name|long
 name|ramBytesUsed
 parameter_list|)
 block|{
+assert|assert
+name|lock
+operator|.
+name|isHeldByCurrentThread
+argument_list|()
+assert|;
 name|cacheSize
 operator|+=
 literal|1
@@ -753,6 +808,12 @@ name|long
 name|sumRamBytesUsed
 parameter_list|)
 block|{
+assert|assert
+name|lock
+operator|.
+name|isHeldByCurrentThread
+argument_list|()
+assert|;
 name|this
 operator|.
 name|ramBytesUsed
@@ -771,6 +832,12 @@ name|void
 name|onClear
 parameter_list|()
 block|{
+assert|assert
+name|lock
+operator|.
+name|isHeldByCurrentThread
+argument_list|()
+assert|;
 name|ramBytesUsed
 operator|=
 literal|0
@@ -786,6 +853,12 @@ name|boolean
 name|requiresEviction
 parameter_list|()
 block|{
+assert|assert
+name|lock
+operator|.
+name|isHeldByCurrentThread
+argument_list|()
+assert|;
 specifier|final
 name|int
 name|size
@@ -821,7 +894,6 @@ return|;
 block|}
 block|}
 DECL|method|get
-specifier|synchronized
 name|DocIdSet
 name|get
 parameter_list|(
@@ -832,6 +904,12 @@ name|LeafReaderContext
 name|context
 parameter_list|)
 block|{
+assert|assert
+name|lock
+operator|.
+name|isHeldByCurrentThread
+argument_list|()
+assert|;
 assert|assert
 name|key
 operator|instanceof
@@ -958,7 +1036,6 @@ name|cached
 return|;
 block|}
 DECL|method|putIfAbsent
-specifier|synchronized
 name|void
 name|putIfAbsent
 parameter_list|(
@@ -972,8 +1049,6 @@ name|DocIdSet
 name|set
 parameter_list|)
 block|{
-comment|// under a lock to make sure that mostRecentlyUsedQueries and cache remain sync'ed
-comment|// we don't want to have user-provided queries as keys in our cache since queries are mutable
 assert|assert
 name|query
 operator|instanceof
@@ -988,6 +1063,14 @@ name|ConstantScoreQuery
 operator|==
 literal|false
 assert|;
+comment|// under a lock to make sure that mostRecentlyUsedQueries and cache remain sync'ed
+name|lock
+operator|.
+name|lock
+argument_list|()
+expr_stmt|;
+try|try
+block|{
 name|Query
 name|singleton
 init|=
@@ -1137,12 +1220,26 @@ name|evictIfNecessary
 argument_list|()
 expr_stmt|;
 block|}
+finally|finally
+block|{
+name|lock
+operator|.
+name|unlock
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 DECL|method|evictIfNecessary
-specifier|synchronized
 name|void
 name|evictIfNecessary
 parameter_list|()
 block|{
+assert|assert
+name|lock
+operator|.
+name|isHeldByCurrentThread
+argument_list|()
+assert|;
 comment|// under a lock to make sure that mostRecentlyUsedQueries and cache keep sync'ed
 if|if
 condition|(
@@ -1243,13 +1340,19 @@ block|}
 comment|/**    * Remove all cache entries for the given core cache key.    */
 DECL|method|clearCoreCacheKey
 specifier|public
-specifier|synchronized
 name|void
 name|clearCoreCacheKey
 parameter_list|(
 name|Object
 name|coreKey
 parameter_list|)
+block|{
+name|lock
+operator|.
+name|lock
+argument_list|()
+expr_stmt|;
+try|try
 block|{
 specifier|final
 name|LeafCache
@@ -1320,16 +1423,31 @@ assert|;
 block|}
 block|}
 block|}
+finally|finally
+block|{
+name|lock
+operator|.
+name|unlock
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 comment|/**    * Remove all cache entries for the given query.    */
 DECL|method|clearQuery
 specifier|public
-specifier|synchronized
 name|void
 name|clearQuery
 parameter_list|(
 name|Query
 name|query
 parameter_list|)
+block|{
+name|lock
+operator|.
+name|lock
+argument_list|()
+expr_stmt|;
+try|try
 block|{
 specifier|final
 name|Query
@@ -1356,6 +1474,15 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+finally|finally
+block|{
+name|lock
+operator|.
+name|unlock
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 DECL|method|onEviction
 specifier|private
 name|void
@@ -1365,6 +1492,12 @@ name|Query
 name|singleton
 parameter_list|)
 block|{
+assert|assert
+name|lock
+operator|.
+name|isHeldByCurrentThread
+argument_list|()
+assert|;
 name|onQueryEviction
 argument_list|(
 name|singleton
@@ -1400,10 +1533,16 @@ block|}
 comment|/**    * Clear the content of this cache.    */
 DECL|method|clear
 specifier|public
-specifier|synchronized
 name|void
 name|clear
 parameter_list|()
+block|{
+name|lock
+operator|.
+name|lock
+argument_list|()
+expr_stmt|;
+try|try
 block|{
 name|cache
 operator|.
@@ -1419,12 +1558,27 @@ name|onClear
 argument_list|()
 expr_stmt|;
 block|}
+finally|finally
+block|{
+name|lock
+operator|.
+name|unlock
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 comment|// pkg-private for testing
 DECL|method|assertConsistent
-specifier|synchronized
 name|void
 name|assertConsistent
 parameter_list|()
+block|{
+name|lock
+operator|.
+name|lock
+argument_list|()
+expr_stmt|;
+try|try
 block|{
 if|if
 condition|(
@@ -1672,16 +1826,31 @@ argument_list|)
 throw|;
 block|}
 block|}
+finally|finally
+block|{
+name|lock
+operator|.
+name|unlock
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 comment|// pkg-private for testing
 comment|// return the list of cached queries in LRU order
 DECL|method|cachedQueries
-specifier|synchronized
 name|List
 argument_list|<
 name|Query
 argument_list|>
 name|cachedQueries
 parameter_list|()
+block|{
+name|lock
+operator|.
+name|lock
+argument_list|()
+expr_stmt|;
+try|try
 block|{
 return|return
 operator|new
@@ -1691,6 +1860,15 @@ argument_list|(
 name|mostRecentlyUsedQueries
 argument_list|)
 return|;
+block|}
+finally|finally
+block|{
+name|lock
+operator|.
+name|unlock
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Override
@@ -1758,10 +1936,12 @@ argument_list|>
 name|getChildResources
 parameter_list|()
 block|{
-synchronized|synchronized
-init|(
-name|this
-init|)
+name|lock
+operator|.
+name|lock
+argument_list|()
+expr_stmt|;
+try|try
 block|{
 return|return
 name|Accountables
@@ -1773,6 +1953,14 @@ argument_list|,
 name|cache
 argument_list|)
 return|;
+block|}
+finally|finally
+block|{
+name|lock
+operator|.
+name|unlock
+argument_list|()
+expr_stmt|;
 block|}
 block|}
 comment|/**    * Return the number of bytes used by the given query. The default    * implementation returns {@link Accountable#ramBytesUsed()} if the query    * implements {@link Accountable} and<code>1024</code> otherwise.    */
@@ -2497,9 +2685,33 @@ name|context
 argument_list|)
 return|;
 block|}
+comment|// If the lock is already busy, prefer using the uncached version than waiting
+if|if
+condition|(
+name|lock
+operator|.
+name|tryLock
+argument_list|()
+operator|==
+literal|false
+condition|)
+block|{
+return|return
+name|in
+operator|.
+name|scorer
+argument_list|(
+name|context
+argument_list|)
+return|;
+block|}
 name|DocIdSet
 name|docIdSet
-init|=
+decl_stmt|;
+try|try
+block|{
+name|docIdSet
+operator|=
 name|get
 argument_list|(
 name|in
@@ -2509,7 +2721,16 @@ argument_list|()
 argument_list|,
 name|context
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|lock
+operator|.
+name|unlock
+argument_list|()
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|docIdSet
@@ -2667,9 +2888,33 @@ name|context
 argument_list|)
 return|;
 block|}
+comment|// If the lock is already busy, prefer using the uncached version than waiting
+if|if
+condition|(
+name|lock
+operator|.
+name|tryLock
+argument_list|()
+operator|==
+literal|false
+condition|)
+block|{
+return|return
+name|in
+operator|.
+name|bulkScorer
+argument_list|(
+name|context
+argument_list|)
+return|;
+block|}
 name|DocIdSet
 name|docIdSet
-init|=
+decl_stmt|;
+try|try
+block|{
+name|docIdSet
+operator|=
 name|get
 argument_list|(
 name|in
@@ -2679,7 +2924,16 @@ argument_list|()
 argument_list|,
 name|context
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|lock
+operator|.
+name|unlock
+argument_list|()
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|docIdSet
